kubernetes/apps/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app.kubernetes.io/name: hivy-web
    app.kubernetes.io/component: frontend
    hivy.io/apply-phase: workload
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hivy-web
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
